--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
   },
   "homepage": "https://github.com/twilio/video-quickstart-js#readme",
   "dependencies": {
+    "@100mslive/hms-video-store": "^0.10.24",
+    "@100mslive/server-sdk": "^0.3.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "prismjs": "^1.6.0",
-    "stackblur-canvas": "^1.4.0",
-    "twilio": "^3.80.1",
-    "twilio-video": "^2.23.0"
+    "prismjs": "^1.6.0"
   },
   "devDependencies": {
     "browserify": "^17.0.0",
